# tp_rob

launch/: tp_rob_gazebo.launch
tp_rob/: CMakeLists.txt  package.xml
tp_rob/include/tp_rob/: one_dof_robot.h
tp_rob/launch/: tp_rob_rviz.launch
tp_rob/msg/: Motor.msg
tp_rob/src/: one_dof_robot.cpp  publisher.cpp  publisher_motor.cpp  service_client_motor.cpp  subscriber.cpp  turtlesim_controller.cpp
tp_rob/srv/: GetMotorData.srv
tp_rob/urdf/: tp_rob.urdf
urdf/: tp_rob.urdf
